--- a/index.html
+++ b/index.html
@@ -39,16 +39,23 @@
 		<img src="image/hospital1.jpg" alt="Hospital" style="width: 100%; height: 100%; object-fit: cover;">
 	</div>
 	<div class="container-fluid bg-light">
-		<div id="custom-navbar" class="navbar navbar-expand-lg">
-			<a href="#" class='navbar-brand'><img src="image/logo.png" style='width:80px;height:50px'></a>
-			<ul class='navbar-nav me-auto'>
-				<li class='nav-item'><a class='nav-link' href="#home">Home</a></li>
-				<li class='nav-item'><a class='nav-link' href="#service">Servicess</a></li>
-				<li class='nav-item'><a class='nav-link' href="#doc">Doctors</a></li>
-				<li class='nav-item'><a class='nav-link' href="#appo">Appointment</a></li>
-				<li class='nav-item'><a class='nav-link' href="#con">Contact us</a></li>
-			</ul>
-		</div>
+		<nav id="custom-navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+            <a href="#" class="navbar-brand">
+                <img src="image/logo.png" style="width:80px;height:50px">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-lg-start justify-content-lg-end" id="navbarNav">
+                <ul class="navbar-nav ms-lg-0 me-auto">
+                    <li class="nav-item "><a class="nav-link" href="#home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#service">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#doc">Doctors</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#appo">Appointment</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#con">Contact us</a></li>
+                </ul>
+            </div>
+        </nav>
                          <!-- ------------------------------secound section------------- -->
                        
 
