--- a/index.html
+++ b/index.html
@@ -182,10 +182,7 @@
 					<div class="col-md-4 border bg-info text-white rounded " >
 					<h3 class='text-center mt-3'>Call us</h3>
 					<h5>Mobile no=083984384</h5>
-					<h5>Mobile no=083984384</h5>
-					<h5>Mobile no=083984384</h5>
-					<h5>Mobile no=083984384</h5>
-					<h5>Mobile no=083984384</h5>
+						<h6 class='mx-4'>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum soluta possimus voluptas dolorum asperiores ullam vitae non. Qui iusto, corrupti ad dolorum dolore ab reiciendis, modi blanditiis, exercitationem magni recusandae.</h6>
 				<h5>Mobile no=083984384</h5>
 				</div>
 					<div class="col-md-4 border bg-info text-white rounded" >
